--- a/404.html
+++ b/404.html
@@ -28,13 +28,15 @@
 
     <div class="container">
       <section id="main_content">
-<h1>index</h1>
-<p>Welcome to the r-webdev website and wiki!
-
+<h1>404</h1>
+<p>This is the 404 page. 
 
 </p>
-<h1><a class="" href="./FAQ.html">FAQ</a></h1>
-<h1><a class="" href="./How_to_contribute_changes.html">How to contribute changes</a></h1>
+<p>It means that you tried to visit a page that hasn&#39;t been created! 
+
+</p>
+<p>You may clone the repository <a href="https://github.com/r-webdev/r-webdev">here</a>. and create this page by sending a pull request. Please see <a class="" href="./How_to_contribute_changes.html">How to contribute changes</a> for more details.
+</p>
 
       </section>
     </div>
