--- a/FAQ.html
+++ b/FAQ.html
@@ -28,13 +28,32 @@
 
     <div class="container">
       <section id="main_content">
-<h1>index</h1>
-<p>Welcome to the r-webdev website and wiki!
-
-
-</p>
-<h1><a class="" href="./FAQ.html">FAQ</a></h1>
-<h1><a class="" href="./How_to_contribute_changes.html">How to contribute changes</a></h1>
+<h1>FAQ</h1>
+<h1>What programming languages do you use?</h1>
+<ul>
+<li><a class="" href="./php.html">php</a></li>
+<li><a class="error404" href="./404.html#pythonmd">python</a></li>
+<li><a class="error404" href="./404.html#aspmd">asp</a></li>
+<li><a class="error404" href="./404.html#rubymd">ruby</a></li>
+</ul>
+<h1>can anyone recommend a web host?</h1>
+<ul>
+<li><a class="error404" href="./404.html#linodemd">linode</a> (linode.com)</li>
+<li><a class="error404" href="./404.html#AWSmd">AWS</a> (aws.amazon.com)</li>
+<li><a class="error404" href="./404.html#slicehostmd">slicehost</a> (slicehost.com)</li>
+</ul>
+<h1>What Text Editor should I use?</h1>
+<ul>
+<li>Sublime Text 2</li>
+<li>Coda 2</li>
+<li><a class="error404" href="./404.html#Vimmd">Vim</a></li>
+<li><a class="error404" href="./404.html#Emacsmd">Emacs</a></li>
+</ul>
+<h1>What operating system do you use?</h1>
+<ul>
+<li>Ubuntu 12.04</li>
+<li>Ubuntu 11.10</li>
+</ul>
 
       </section>
     </div>
