--- a/How_to_contribute_changes.html
+++ b/How_to_contribute_changes.html
@@ -28,13 +28,24 @@
 
     <div class="container">
       <section id="main_content">
-<h1>index</h1>
-<p>Welcome to the r-webdev website and wiki!
-
-
-</p>
-<h1><a class="" href="./FAQ.html">FAQ</a></h1>
-<h1><a class="" href="./How_to_contribute_changes.html">How to contribute changes</a></h1>
+<h1>How to contribute changes</h1>
+<h3>In order to contribute a change to this site:</h3>
+<ul>
+<li>Make a github account</li>
+<li>set up a <a href="https://github.com/r-webdev/r-webdev/fork_select">fork</a> of <a href="https://github.com/r-webdev/r-webdev/">this repository</a></li>
+<li>Create and modify  .md files in order to edit the templates that are compiled to this site.</li>
+<li>build the site (see below) and commit the compiled .html files</li>
+<li>set up your forked repo as a website</li>
+<li>send a pull request using the github GUI along with the website URL</li>
+</ul>
+<h4>Tech details in order to build the site on your own</h4>
+<ul>
+<li>Please clone this repo into your home folder</li>
+<li>cd into the repo </li>
+<li>run $ make init</li>
+<li>run $ make </li>
+<li>commit all modified files</li>
+</ul>
 
       </section>
     </div>
