--- a/Readme.html
+++ b/Readme.html
@@ -28,13 +28,15 @@
 
     <div class="container">
       <section id="main_content">
-<h1>index</h1>
-<p>Welcome to the r-webdev website and wiki!
-
+<h1>Readme</h1>
+<p>Welcome to <a href="https://github.com/r-webdev/wiki">https://github.com/r-webdev/wiki</a>, the code behind <a href="http://r-webdev.github.com/wiki/">http://r-webdev.github.com/wiki/</a>.
 
 </p>
-<h1><a class="" href="./FAQ.html">FAQ</a></h1>
-<h1><a class="" href="./How_to_contribute_changes.html">How to contribute changes</a></h1>
+<p>You can make changes to the wiki based website by cloning this repository and sending a pull request.
+
+</p>
+<p>Please see <a href="http://r-webdev.github.com/wiki/How_to_contribute_changes.html">How to contribute changes</a> for more info.
+</p>
 
       </section>
     </div>
