--- a/Home.html
+++ b/Home.html
@@ -28,13 +28,11 @@
 
     <div class="container">
       <section id="main_content">
-<h1>index</h1>
-<p>Welcome to the r-webdev website and wiki!
-
+<h1>Home</h1>
+<p>Welcome to the r-webdev wiki!
 
 </p>
 <h1><a class="" href="./FAQ.html">FAQ</a></h1>
-<h1><a class="" href="./How_to_contribute_changes.html">How to contribute changes</a></h1>
 
       </section>
     </div>
